[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dupehunter"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "send2trash",
    "bext",
]

[tool.setuptools]
py-modules = ["dupehunter"]

[project.scripts]
dupehunter = "dupehunter:main"
